--- a/server/.env
+++ b/server/.env
@@ -1,2 +1,2 @@
 PORT = 'https://chatwfriendss.vercel.app/'
-MONGO_URL = 'mongodb://localhost:27017/chat'
+MONGO_URL = ''mongodb+srv://kumarpriyanshu735:3ZkZIHdeW9cokzUC@cluster0.lahhs.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0''
