--- a/server/.env
+++ b/server/.env
@@ -1,2 +1,2 @@
-PORT = 'https://chatwfriends.vercel.app';
-MONGO_URL = 'mongodb+srv://kumarpriyanshu735:3ZkZIHdeW9cokzUC@cluster0.lahhs.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0'
+PORT = 5000;
+MONGO_URL = mongodb+srv://kumarpriyanshu735:3ZkZIHdeW9cokzUC@cluster0.lahhs.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
